@@ -22,7 +22,7 @@ plugins {
   id 'org.sonarqube' version '6.2.0.5505'
   id 'project-report'
   id 'idea'
-  id 'info.solidsoft.pitest' version '1.15.0'
+  id 'info.solidsoft.pitest' version '1.19.0-rc.2'
   id 'com.github.hmcts.rse-cft-lib' version '0.19.1705'
 }
 
@@ -311,8 +311,6 @@ def versions = [
   pact_version    : '4.1.7',
   junit_jupiter   : '5.11.4',
   lombok          : '1.18.38',
-  pitest          : '1.15.0',
-  gradlePitest    : '1.3.0',
   sonarPitest     : '0.5'
 ]
 
@@ -377,9 +375,9 @@ dependencies {
 
   implementation 'org.postgresql:postgresql:42.7.8'
 
-  testImplementation group: 'org.pitest', name: 'pitest', version: '1.16.1'
+  testImplementation group: 'org.pitest', name: 'pitest', version: '1.22.0'
   testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.15.0'
-  testImplementation group: 'org.pitest', name: 'pitest-junit5-plugin', version: '1.2.2'
+  testImplementation group: 'org.pitest', name: 'pitest-junit5-plugin', version: '1.2.3'
 
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: versions.pdfbox
   integrationTestImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: versions.pdfbox
@@ -475,6 +473,7 @@ pitest {
   ])
   timestampedReports.set(true)
   mutationThreshold.set(75)
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 dependencyManagement {
